--- a/EthereumFunctionAppDemo/package.json
+++ b/EthereumFunctionAppDemo/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bip39": "^2.5.0",
+    "ethereumjs-tx": "^1.3.4",
     "ethereumjs-wallet": "^0.6.0",
     "truffle-contract": "^3.0.4",
     "truffle-hdwallet-provider": "0.0.3",
